alignment fix

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -79,6 +79,10 @@
     align-items: center;
     text-align: center;
     padding: 15px;
+
+    @media (min-width: 768px) {
+      flex-direction: row;
+    }
   }
   &__flag-option {
     width: 60px;
@@ -90,6 +94,9 @@
   &__item-wrapper {
     @include flex-column();
     margin-left: 20px;
+    @media (min-width: 768px) {
+      text-align: left;
+    }
   }
 
   &__item-title {
@@ -123,4 +130,3 @@
     margin-bottom: 25px;
   }
 }
-
